2008-05-25  Bradley M. Kuhn  <bkuhn@ebb.org>

	* tests/test-clientserver.py.in (ClientServer.killThenPing): Wrote
	function.
	(ClientServer.test03_killThenPing): Wrote function.

2008-05-23  Loic Dachary <loic@dachary.org>

	* Release 1.6.0

	* pokernetwork/pokeravatar.py: Move PACKET_POKER_TABLE_JOIN
	  handling before table selection otherwise it is ignored when the
	  player has already joined the table.

2008-05-22  Loic Dachary <loic@dachary.org>

	* pokernetwork/pokerpackets.py: PacketPokerTourneyPlayersList and
	  PacketPokerPlayersList specify field type
	* pokernetwork/pokerpackets.py: PacketPokerTourneyPlayersList and
	  PacketPokerPlayersList documentation fixes

2008-05-21  Loic Dachary <loic@dachary.org>

	* debian/control, debian/control.unstable: poker2d depends on
	  python-openssl

2008-05-20  Loic Dachary <loic@dachary.org>

	* tests/run.in: not running a makefile, @echo won't do no good
	* pokernetwork/client.py, pokernetwork/currencyclient.py,
	  pokernetwork/pokerchildren.py, pokernetwork/pokerclient.py,
	  pokernetwork/pokertable.py, pokernetwork/protocol.py,
	  pokernetwork/server.py, pokernetwork/upgrade.py,
	  pokerui/pokerinteractor.py, pokerui/pokerrenderer.py,
	  tests/run.in, tests/test-pokeravatar.py.in,
	  tests/test-pokercashier.py.in, tests/test-pokerchildren.py.in,
	  tests/test-pokerclient.py.in,
	  tests/test-pokerclientpackets.py.in,
	  tests/test-pokerpackets.py.in, tests/test-pokerservice.py.in,
	  tests/test-quit.py.in, tests/test-string.py.in,
	  tests/test-upgrade.py.in, tests/testpackets.py: replace print
	  with calls to self.message. systematic use of the testmessage.py
	  library to control verbosity. comment on how to figure out if
	  lines modified are covered by the python tests.
	* tests/testmessages.py: re-implement all, implement reentrance,
	  searching the logs. cover more poker-network files.
	* tests/test-pokertable.py.in: implement the new TableJoin semantic